compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CASE
    LBRACKET
    NOT
    PIPE
    RBRACKET
    SHAFT
    SWITCH
    UNDERSCORE

Grammar

Rule 0     S' -> programa
Rule 1     programa -> MAIN LBRACE lista_declaraciones RBRACE
Rule 2     lista_declaraciones -> lista_declaraciones declaracion
Rule 3     lista_declaraciones -> declaracion
Rule 4     declaracion -> declaracion_variable
Rule 5     declaracion -> lista_sentencias
Rule 6     declaracion -> comentario
Rule 7     comentario -> COMENTARIO
Rule 8     declaracion_variable -> tipo identificador SEMICOLON
Rule 9     identificador -> identificador COMMA IDENTIFICADOR
Rule 10    identificador -> IDENTIFICADOR
Rule 11    tipo -> INT
Rule 12    tipo -> DOUBLE
Rule 13    tipo -> INTEGER
Rule 14    tipo -> REAL
Rule 15    lista_sentencias -> lista_sentencias sentencia
Rule 16    lista_sentencias -> sentencia
Rule 17    lista_sentencias -> vacio
Rule 18    sentencia -> seleccion
Rule 19    sentencia -> iteracion
Rule 20    sentencia -> repeticion
Rule 21    sentencia -> entrada
Rule 22    sentencia -> salida
Rule 23    sentencia -> asignacion
Rule 24    sentencia -> incremento
Rule 25    sentencia -> decremento
Rule 26    asignacion -> IDENTIFICADOR ASSIGN p_expresion_finalizada
Rule 27    incremento -> IDENTIFICADOR INC SEMICOLON
Rule 28    decremento -> IDENTIFICADOR DEC SEMICOLON
Rule 29    p_expresion_finalizada -> expresion SEMICOLON
Rule 30    p_expresion_finalizada -> SEMICOLON
Rule 31    seleccion -> IF expresion THEN lista_sentencias END
Rule 32    seleccion -> IF expresion THEN lista_sentencias ELSE lista_sentencias END
Rule 33    iteracion -> WHILE expresion DO lista_sentencias END
Rule 34    repeticion -> DO lista_sentencias UNTIL expresion SEMICOLON
Rule 35    entrada -> CIN expresion SEMICOLON
Rule 36    salida -> COUT expresion SEMICOLON
Rule 37    expresion -> expresion AND expresion
Rule 38    expresion -> expresion OR expresion
Rule 39    expresion -> expresion_simple operacion_relacional expresion_simple
Rule 40    expresion -> expresion_simple
Rule 41    operacion_relacional -> MORETHAN
Rule 42    operacion_relacional -> LESSTHAN
Rule 43    operacion_relacional -> MOREEQUALS
Rule 44    operacion_relacional -> LESSEQUALS
Rule 45    operacion_relacional -> EQUALS
Rule 46    operacion_relacional -> NOTEQUALS
Rule 47    operacion_relacional -> AND
Rule 48    operacion_relacional -> OR
Rule 49    expresion_simple -> expresion_simple primer_operador term
Rule 50    expresion_simple -> term
Rule 51    primer_operador -> SUMA
Rule 52    primer_operador -> RESTA
Rule 53    term -> term segundo_operador factor
Rule 54    term -> factor
Rule 55    segundo_operador -> MULT
Rule 56    segundo_operador -> DIVIDE
Rule 57    segundo_operador -> MOD
Rule 58    factor -> factor tercer_operador componente
Rule 59    factor -> componente
Rule 60    tercer_operador -> POT
Rule 61    componente -> LPARENT expresion RPARENT
Rule 62    componente -> numero
Rule 63    componente -> IDENTIFICADOR
Rule 64    numero -> INT
Rule 65    numero -> DOUBLE
Rule 66    numero -> LPARENT RESTA INT RPARENT
Rule 67    numero -> LPARENT RESTA DOUBLE RPARENT
Rule 68    vacio -> <empty>

Terminals, with rules where they appear

AND                  : 37 47
ASSIGN               : 26
CASE                 : 
CIN                  : 35
COMENTARIO           : 7
COMMA                : 9
COUT                 : 36
DEC                  : 28
DIVIDE               : 56
DO                   : 33 34
DOUBLE               : 12 65 67
ELSE                 : 32
END                  : 31 32 33
EQUALS               : 45
IDENTIFICADOR        : 9 10 26 27 28 63
IF                   : 31 32
INC                  : 27
INT                  : 11 64 66
INTEGER              : 13
LBRACE               : 1
LBRACKET             : 
LESSEQUALS           : 44
LESSTHAN             : 42
LPARENT              : 61 66 67
MAIN                 : 1
MOD                  : 57
MOREEQUALS           : 43
MORETHAN             : 41
MULT                 : 55
NOT                  : 
NOTEQUALS            : 46
OR                   : 38 48
PIPE                 : 
POT                  : 60
RBRACE               : 1
RBRACKET             : 
REAL                 : 14
RESTA                : 52 66 67
RPARENT              : 61 66 67
SEMICOLON            : 8 27 28 29 30 34 35 36
SHAFT                : 
SUMA                 : 51
SWITCH               : 
THEN                 : 31 32
UNDERSCORE           : 
UNTIL                : 34
WHILE                : 33
error                : 

Nonterminals, with rules where they appear

asignacion           : 23
comentario           : 6
componente           : 58 59
declaracion          : 2 3
declaracion_variable : 4
decremento           : 25
entrada              : 21
expresion            : 29 31 32 33 34 35 36 37 37 38 38 61
expresion_simple     : 39 39 40 49
factor               : 53 54 58
identificador        : 8 9
incremento           : 24
iteracion            : 19
lista_declaraciones  : 1 2
lista_sentencias     : 5 15 31 32 32 33 34
numero               : 62
operacion_relacional : 39
p_expresion_finalizada : 26
primer_operador      : 49
programa             : 0
repeticion           : 20
salida               : 22
segundo_operador     : 53
seleccion            : 18
sentencia            : 15 16
tercer_operador      : 58
term                 : 49 50 53
tipo                 : 8
vacio                : 17

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . MAIN LBRACE lista_declaraciones RBRACE

    MAIN            shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> MAIN . LBRACE lista_declaraciones RBRACE

    LBRACE          shift and go to state 3


state 3

    (1) programa -> MAIN LBRACE . lista_declaraciones RBRACE
    (2) lista_declaraciones -> . lista_declaraciones declaracion
    (3) lista_declaraciones -> . declaracion
    (4) declaracion -> . declaracion_variable
    (5) declaracion -> . lista_sentencias
    (6) declaracion -> . comentario
    (8) declaracion_variable -> . tipo identificador SEMICOLON
    (15) lista_sentencias -> . lista_sentencias sentencia
    (16) lista_sentencias -> . sentencia
    (17) lista_sentencias -> . vacio
    (7) comentario -> . COMENTARIO
    (11) tipo -> . INT
    (12) tipo -> . DOUBLE
    (13) tipo -> . INTEGER
    (14) tipo -> . REAL
    (18) sentencia -> . seleccion
    (19) sentencia -> . iteracion
    (20) sentencia -> . repeticion
    (21) sentencia -> . entrada
    (22) sentencia -> . salida
    (23) sentencia -> . asignacion
    (24) sentencia -> . incremento
    (25) sentencia -> . decremento
    (68) vacio -> .
    (31) seleccion -> . IF expresion THEN lista_sentencias END
    (32) seleccion -> . IF expresion THEN lista_sentencias ELSE lista_sentencias END
    (33) iteracion -> . WHILE expresion DO lista_sentencias END
    (34) repeticion -> . DO lista_sentencias UNTIL expresion SEMICOLON
    (35) entrada -> . CIN expresion SEMICOLON
    (36) salida -> . COUT expresion SEMICOLON
    (26) asignacion -> . IDENTIFICADOR ASSIGN p_expresion_finalizada
    (27) incremento -> . IDENTIFICADOR INC SEMICOLON
    (28) decremento -> . IDENTIFICADOR DEC SEMICOLON

  ! shift/reduce conflict for COMENTARIO resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for REAL resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for CIN resolved as shift
  ! shift/reduce conflict for COUT resolved as shift
  ! shift/reduce conflict for IDENTIFICADOR resolved as shift
    COMENTARIO      shift and go to state 12
    INT             shift and go to state 13
    DOUBLE          shift and go to state 14
    INTEGER         shift and go to state 15
    REAL            shift and go to state 16
    RBRACE          reduce using rule 68 (vacio -> .)
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    DO              shift and go to state 27
    CIN             shift and go to state 28
    COUT            shift and go to state 29
    IDENTIFICADOR   shift and go to state 30

  ! IF              [ reduce using rule 68 (vacio -> .) ]
  ! WHILE           [ reduce using rule 68 (vacio -> .) ]
  ! DO              [ reduce using rule 68 (vacio -> .) ]
  ! CIN             [ reduce using rule 68 (vacio -> .) ]
  ! COUT            [ reduce using rule 68 (vacio -> .) ]
  ! IDENTIFICADOR   [ reduce using rule 68 (vacio -> .) ]
  ! COMENTARIO      [ reduce using rule 68 (vacio -> .) ]
  ! INT             [ reduce using rule 68 (vacio -> .) ]
  ! DOUBLE          [ reduce using rule 68 (vacio -> .) ]
  ! INTEGER         [ reduce using rule 68 (vacio -> .) ]
  ! REAL            [ reduce using rule 68 (vacio -> .) ]

    lista_declaraciones            shift and go to state 4
    declaracion                    shift and go to state 5
    declaracion_variable           shift and go to state 6
    lista_sentencias               shift and go to state 7
    comentario                     shift and go to state 8
    tipo                           shift and go to state 9
    sentencia                      shift and go to state 10
    vacio                          shift and go to state 11
    seleccion                      shift and go to state 17
    iteracion                      shift and go to state 18
    repeticion                     shift and go to state 19
    entrada                        shift and go to state 20
    salida                         shift and go to state 21
    asignacion                     shift and go to state 22
    incremento                     shift and go to state 23
    decremento                     shift and go to state 24

state 4

    (1) programa -> MAIN LBRACE lista_declaraciones . RBRACE
    (2) lista_declaraciones -> lista_declaraciones . declaracion
    (4) declaracion -> . declaracion_variable
    (5) declaracion -> . lista_sentencias
    (6) declaracion -> . comentario
    (8) declaracion_variable -> . tipo identificador SEMICOLON
    (15) lista_sentencias -> . lista_sentencias sentencia
    (16) lista_sentencias -> . sentencia
    (17) lista_sentencias -> . vacio
    (7) comentario -> . COMENTARIO
    (11) tipo -> . INT
    (12) tipo -> . DOUBLE
    (13) tipo -> . INTEGER
    (14) tipo -> . REAL
    (18) sentencia -> . seleccion
    (19) sentencia -> . iteracion
    (20) sentencia -> . repeticion
    (21) sentencia -> . entrada
    (22) sentencia -> . salida
    (23) sentencia -> . asignacion
    (24) sentencia -> . incremento
    (25) sentencia -> . decremento
    (68) vacio -> .
    (31) seleccion -> . IF expresion THEN lista_sentencias END
    (32) seleccion -> . IF expresion THEN lista_sentencias ELSE lista_sentencias END
    (33) iteracion -> . WHILE expresion DO lista_sentencias END
    (34) repeticion -> . DO lista_sentencias UNTIL expresion SEMICOLON
    (35) entrada -> . CIN expresion SEMICOLON
    (36) salida -> . COUT expresion SEMICOLON
    (26) asignacion -> . IDENTIFICADOR ASSIGN p_expresion_finalizada
    (27) incremento -> . IDENTIFICADOR INC SEMICOLON
    (28) decremento -> . IDENTIFICADOR DEC SEMICOLON

  ! shift/reduce conflict for RBRACE resolved as shift
  ! shift/reduce conflict for COMENTARIO resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for REAL resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for CIN resolved as shift
  ! shift/reduce conflict for COUT resolved as shift
  ! shift/reduce conflict for IDENTIFICADOR resolved as shift
    RBRACE          shift and go to state 31
    COMENTARIO      shift and go to state 12
    INT             shift and go to state 13
    DOUBLE          shift and go to state 14
    INTEGER         shift and go to state 15
    REAL            shift and go to state 16
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    DO              shift and go to state 27
    CIN             shift and go to state 28
    COUT            shift and go to state 29
    IDENTIFICADOR   shift and go to state 30

  ! IF              [ reduce using rule 68 (vacio -> .) ]
  ! WHILE           [ reduce using rule 68 (vacio -> .) ]
  ! DO              [ reduce using rule 68 (vacio -> .) ]
  ! CIN             [ reduce using rule 68 (vacio -> .) ]
  ! COUT            [ reduce using rule 68 (vacio -> .) ]
  ! IDENTIFICADOR   [ reduce using rule 68 (vacio -> .) ]
  ! RBRACE          [ reduce using rule 68 (vacio -> .) ]
  ! COMENTARIO      [ reduce using rule 68 (vacio -> .) ]
  ! INT             [ reduce using rule 68 (vacio -> .) ]
  ! DOUBLE          [ reduce using rule 68 (vacio -> .) ]
  ! INTEGER         [ reduce using rule 68 (vacio -> .) ]
  ! REAL            [ reduce using rule 68 (vacio -> .) ]

    declaracion                    shift and go to state 32
    declaracion_variable           shift and go to state 6
    lista_sentencias               shift and go to state 7
    comentario                     shift and go to state 8
    tipo                           shift and go to state 9
    sentencia                      shift and go to state 10
    vacio                          shift and go to state 11
    seleccion                      shift and go to state 17
    iteracion                      shift and go to state 18
    repeticion                     shift and go to state 19
    entrada                        shift and go to state 20
    salida                         shift and go to state 21
    asignacion                     shift and go to state 22
    incremento                     shift and go to state 23
    decremento                     shift and go to state 24

state 5

    (3) lista_declaraciones -> declaracion .

    RBRACE          reduce using rule 3 (lista_declaraciones -> declaracion .)
    COMENTARIO      reduce using rule 3 (lista_declaraciones -> declaracion .)
    INT             reduce using rule 3 (lista_declaraciones -> declaracion .)
    DOUBLE          reduce using rule 3 (lista_declaraciones -> declaracion .)
    INTEGER         reduce using rule 3 (lista_declaraciones -> declaracion .)
    REAL            reduce using rule 3 (lista_declaraciones -> declaracion .)
    IF              reduce using rule 3 (lista_declaraciones -> declaracion .)
    WHILE           reduce using rule 3 (lista_declaraciones -> declaracion .)
    DO              reduce using rule 3 (lista_declaraciones -> declaracion .)
    CIN             reduce using rule 3 (lista_declaraciones -> declaracion .)
    COUT            reduce using rule 3 (lista_declaraciones -> declaracion .)
    IDENTIFICADOR   reduce using rule 3 (lista_declaraciones -> declaracion .)


state 6

    (4) declaracion -> declaracion_variable .

    RBRACE          reduce using rule 4 (declaracion -> declaracion_variable .)
    COMENTARIO      reduce using rule 4 (declaracion -> declaracion_variable .)
    INT             reduce using rule 4 (declaracion -> declaracion_variable .)
    DOUBLE          reduce using rule 4 (declaracion -> declaracion_variable .)
    INTEGER         reduce using rule 4 (declaracion -> declaracion_variable .)
    REAL            reduce using rule 4 (declaracion -> declaracion_variable .)
    IF              reduce using rule 4 (declaracion -> declaracion_variable .)
    WHILE           reduce using rule 4 (declaracion -> declaracion_variable .)
    DO              reduce using rule 4 (declaracion -> declaracion_variable .)
    CIN             reduce using rule 4 (declaracion -> declaracion_variable .)
    COUT            reduce using rule 4 (declaracion -> declaracion_variable .)
    IDENTIFICADOR   reduce using rule 4 (declaracion -> declaracion_variable .)


state 7

    (5) declaracion -> lista_sentencias .
    (15) lista_sentencias -> lista_sentencias . sentencia
    (18) sentencia -> . seleccion
    (19) sentencia -> . iteracion
    (20) sentencia -> . repeticion
    (21) sentencia -> . entrada
    (22) sentencia -> . salida
    (23) sentencia -> . asignacion
    (24) sentencia -> . incremento
    (25) sentencia -> . decremento
    (31) seleccion -> . IF expresion THEN lista_sentencias END
    (32) seleccion -> . IF expresion THEN lista_sentencias ELSE lista_sentencias END
    (33) iteracion -> . WHILE expresion DO lista_sentencias END
    (34) repeticion -> . DO lista_sentencias UNTIL expresion SEMICOLON
    (35) entrada -> . CIN expresion SEMICOLON
    (36) salida -> . COUT expresion SEMICOLON
    (26) asignacion -> . IDENTIFICADOR ASSIGN p_expresion_finalizada
    (27) incremento -> . IDENTIFICADOR INC SEMICOLON
    (28) decremento -> . IDENTIFICADOR DEC SEMICOLON

  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for CIN resolved as shift
  ! shift/reduce conflict for COUT resolved as shift
  ! shift/reduce conflict for IDENTIFICADOR resolved as shift
    RBRACE          reduce using rule 5 (declaracion -> lista_sentencias .)
    COMENTARIO      reduce using rule 5 (declaracion -> lista_sentencias .)
    INT             reduce using rule 5 (declaracion -> lista_sentencias .)
    DOUBLE          reduce using rule 5 (declaracion -> lista_sentencias .)
    INTEGER         reduce using rule 5 (declaracion -> lista_sentencias .)
    REAL            reduce using rule 5 (declaracion -> lista_sentencias .)
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    DO              shift and go to state 27
    CIN             shift and go to state 28
    COUT            shift and go to state 29
    IDENTIFICADOR   shift and go to state 30

  ! IF              [ reduce using rule 5 (declaracion -> lista_sentencias .) ]
  ! WHILE           [ reduce using rule 5 (declaracion -> lista_sentencias .) ]
  ! DO              [ reduce using rule 5 (declaracion -> lista_sentencias .) ]
  ! CIN             [ reduce using rule 5 (declaracion -> lista_sentencias .) ]
  ! COUT            [ reduce using rule 5 (declaracion -> lista_sentencias .) ]
  ! IDENTIFICADOR   [ reduce using rule 5 (declaracion -> lista_sentencias .) ]

    sentencia                      shift and go to state 33
    seleccion                      shift and go to state 17
    iteracion                      shift and go to state 18
    repeticion                     shift and go to state 19
    entrada                        shift and go to state 20
    salida                         shift and go to state 21
    asignacion                     shift and go to state 22
    incremento                     shift and go to state 23
    decremento                     shift and go to state 24

state 8

    (6) declaracion -> comentario .

    RBRACE          reduce using rule 6 (declaracion -> comentario .)
    COMENTARIO      reduce using rule 6 (declaracion -> comentario .)
    INT             reduce using rule 6 (declaracion -> comentario .)
    DOUBLE          reduce using rule 6 (declaracion -> comentario .)
    INTEGER         reduce using rule 6 (declaracion -> comentario .)
    REAL            reduce using rule 6 (declaracion -> comentario .)
    IF              reduce using rule 6 (declaracion -> comentario .)
    WHILE           reduce using rule 6 (declaracion -> comentario .)
    DO              reduce using rule 6 (declaracion -> comentario .)
    CIN             reduce using rule 6 (declaracion -> comentario .)
    COUT            reduce using rule 6 (declaracion -> comentario .)
    IDENTIFICADOR   reduce using rule 6 (declaracion -> comentario .)


state 9

    (8) declaracion_variable -> tipo . identificador SEMICOLON
    (9) identificador -> . identificador COMMA IDENTIFICADOR
    (10) identificador -> . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 35

    identificador                  shift and go to state 34

state 10

    (16) lista_sentencias -> sentencia .

    IF              reduce using rule 16 (lista_sentencias -> sentencia .)
    WHILE           reduce using rule 16 (lista_sentencias -> sentencia .)
    DO              reduce using rule 16 (lista_sentencias -> sentencia .)
    CIN             reduce using rule 16 (lista_sentencias -> sentencia .)
    COUT            reduce using rule 16 (lista_sentencias -> sentencia .)
    IDENTIFICADOR   reduce using rule 16 (lista_sentencias -> sentencia .)
    RBRACE          reduce using rule 16 (lista_sentencias -> sentencia .)
    COMENTARIO      reduce using rule 16 (lista_sentencias -> sentencia .)
    INT             reduce using rule 16 (lista_sentencias -> sentencia .)
    DOUBLE          reduce using rule 16 (lista_sentencias -> sentencia .)
    INTEGER         reduce using rule 16 (lista_sentencias -> sentencia .)
    REAL            reduce using rule 16 (lista_sentencias -> sentencia .)
    UNTIL           reduce using rule 16 (lista_sentencias -> sentencia .)
    END             reduce using rule 16 (lista_sentencias -> sentencia .)
    ELSE            reduce using rule 16 (lista_sentencias -> sentencia .)


state 11

    (17) lista_sentencias -> vacio .

    IF              reduce using rule 17 (lista_sentencias -> vacio .)
    WHILE           reduce using rule 17 (lista_sentencias -> vacio .)
    DO              reduce using rule 17 (lista_sentencias -> vacio .)
    CIN             reduce using rule 17 (lista_sentencias -> vacio .)
    COUT            reduce using rule 17 (lista_sentencias -> vacio .)
    IDENTIFICADOR   reduce using rule 17 (lista_sentencias -> vacio .)
    RBRACE          reduce using rule 17 (lista_sentencias -> vacio .)
    COMENTARIO      reduce using rule 17 (lista_sentencias -> vacio .)
    INT             reduce using rule 17 (lista_sentencias -> vacio .)
    DOUBLE          reduce using rule 17 (lista_sentencias -> vacio .)
    INTEGER         reduce using rule 17 (lista_sentencias -> vacio .)
    REAL            reduce using rule 17 (lista_sentencias -> vacio .)
    UNTIL           reduce using rule 17 (lista_sentencias -> vacio .)
    END             reduce using rule 17 (lista_sentencias -> vacio .)
    ELSE            reduce using rule 17 (lista_sentencias -> vacio .)


state 12

    (7) comentario -> COMENTARIO .

    RBRACE          reduce using rule 7 (comentario -> COMENTARIO .)
    COMENTARIO      reduce using rule 7 (comentario -> COMENTARIO .)
    INT             reduce using rule 7 (comentario -> COMENTARIO .)
    DOUBLE          reduce using rule 7 (comentario -> COMENTARIO .)
    INTEGER         reduce using rule 7 (comentario -> COMENTARIO .)
    REAL            reduce using rule 7 (comentario -> COMENTARIO .)
    IF              reduce using rule 7 (comentario -> COMENTARIO .)
    WHILE           reduce using rule 7 (comentario -> COMENTARIO .)
    DO              reduce using rule 7 (comentario -> COMENTARIO .)
    CIN             reduce using rule 7 (comentario -> COMENTARIO .)
    COUT            reduce using rule 7 (comentario -> COMENTARIO .)
    IDENTIFICADOR   reduce using rule 7 (comentario -> COMENTARIO .)


state 13

    (11) tipo -> INT .

    IDENTIFICADOR   reduce using rule 11 (tipo -> INT .)


state 14

    (12) tipo -> DOUBLE .

    IDENTIFICADOR   reduce using rule 12 (tipo -> DOUBLE .)


state 15

    (13) tipo -> INTEGER .

    IDENTIFICADOR   reduce using rule 13 (tipo -> INTEGER .)


state 16

    (14) tipo -> REAL .

    IDENTIFICADOR   reduce using rule 14 (tipo -> REAL .)


state 17

    (18) sentencia -> seleccion .

    IF              reduce using rule 18 (sentencia -> seleccion .)
    WHILE           reduce using rule 18 (sentencia -> seleccion .)
    DO              reduce using rule 18 (sentencia -> seleccion .)
    CIN             reduce using rule 18 (sentencia -> seleccion .)
    COUT            reduce using rule 18 (sentencia -> seleccion .)
    IDENTIFICADOR   reduce using rule 18 (sentencia -> seleccion .)
    RBRACE          reduce using rule 18 (sentencia -> seleccion .)
    COMENTARIO      reduce using rule 18 (sentencia -> seleccion .)
    INT             reduce using rule 18 (sentencia -> seleccion .)
    DOUBLE          reduce using rule 18 (sentencia -> seleccion .)
    INTEGER         reduce using rule 18 (sentencia -> seleccion .)
    REAL            reduce using rule 18 (sentencia -> seleccion .)
    UNTIL           reduce using rule 18 (sentencia -> seleccion .)
    END             reduce using rule 18 (sentencia -> seleccion .)
    ELSE            reduce using rule 18 (sentencia -> seleccion .)


state 18

    (19) sentencia -> iteracion .

    IF              reduce using rule 19 (sentencia -> iteracion .)
    WHILE           reduce using rule 19 (sentencia -> iteracion .)
    DO              reduce using rule 19 (sentencia -> iteracion .)
    CIN             reduce using rule 19 (sentencia -> iteracion .)
    COUT            reduce using rule 19 (sentencia -> iteracion .)
    IDENTIFICADOR   reduce using rule 19 (sentencia -> iteracion .)
    RBRACE          reduce using rule 19 (sentencia -> iteracion .)
    COMENTARIO      reduce using rule 19 (sentencia -> iteracion .)
    INT             reduce using rule 19 (sentencia -> iteracion .)
    DOUBLE          reduce using rule 19 (sentencia -> iteracion .)
    INTEGER         reduce using rule 19 (sentencia -> iteracion .)
    REAL            reduce using rule 19 (sentencia -> iteracion .)
    UNTIL           reduce using rule 19 (sentencia -> iteracion .)
    END             reduce using rule 19 (sentencia -> iteracion .)
    ELSE            reduce using rule 19 (sentencia -> iteracion .)


state 19

    (20) sentencia -> repeticion .

    IF              reduce using rule 20 (sentencia -> repeticion .)
    WHILE           reduce using rule 20 (sentencia -> repeticion .)
    DO              reduce using rule 20 (sentencia -> repeticion .)
    CIN             reduce using rule 20 (sentencia -> repeticion .)
    COUT            reduce using rule 20 (sentencia -> repeticion .)
    IDENTIFICADOR   reduce using rule 20 (sentencia -> repeticion .)
    RBRACE          reduce using rule 20 (sentencia -> repeticion .)
    COMENTARIO      reduce using rule 20 (sentencia -> repeticion .)
    INT             reduce using rule 20 (sentencia -> repeticion .)
    DOUBLE          reduce using rule 20 (sentencia -> repeticion .)
    INTEGER         reduce using rule 20 (sentencia -> repeticion .)
    REAL            reduce using rule 20 (sentencia -> repeticion .)
    UNTIL           reduce using rule 20 (sentencia -> repeticion .)
    END             reduce using rule 20 (sentencia -> repeticion .)
    ELSE            reduce using rule 20 (sentencia -> repeticion .)


state 20

    (21) sentencia -> entrada .

    IF              reduce using rule 21 (sentencia -> entrada .)
    WHILE           reduce using rule 21 (sentencia -> entrada .)
    DO              reduce using rule 21 (sentencia -> entrada .)
    CIN             reduce using rule 21 (sentencia -> entrada .)
    COUT            reduce using rule 21 (sentencia -> entrada .)
    IDENTIFICADOR   reduce using rule 21 (sentencia -> entrada .)
    RBRACE          reduce using rule 21 (sentencia -> entrada .)
    COMENTARIO      reduce using rule 21 (sentencia -> entrada .)
    INT             reduce using rule 21 (sentencia -> entrada .)
    DOUBLE          reduce using rule 21 (sentencia -> entrada .)
    INTEGER         reduce using rule 21 (sentencia -> entrada .)
    REAL            reduce using rule 21 (sentencia -> entrada .)
    UNTIL           reduce using rule 21 (sentencia -> entrada .)
    END             reduce using rule 21 (sentencia -> entrada .)
    ELSE            reduce using rule 21 (sentencia -> entrada .)


state 21

    (22) sentencia -> salida .

    IF              reduce using rule 22 (sentencia -> salida .)
    WHILE           reduce using rule 22 (sentencia -> salida .)
    DO              reduce using rule 22 (sentencia -> salida .)
    CIN             reduce using rule 22 (sentencia -> salida .)
    COUT            reduce using rule 22 (sentencia -> salida .)
    IDENTIFICADOR   reduce using rule 22 (sentencia -> salida .)
    RBRACE          reduce using rule 22 (sentencia -> salida .)
    COMENTARIO      reduce using rule 22 (sentencia -> salida .)
    INT             reduce using rule 22 (sentencia -> salida .)
    DOUBLE          reduce using rule 22 (sentencia -> salida .)
    INTEGER         reduce using rule 22 (sentencia -> salida .)
    REAL            reduce using rule 22 (sentencia -> salida .)
    UNTIL           reduce using rule 22 (sentencia -> salida .)
    END             reduce using rule 22 (sentencia -> salida .)
    ELSE            reduce using rule 22 (sentencia -> salida .)


state 22

